@@ -5,7 +5,6 @@ import static org.junit.jupiter.api.Assertions.*;
 
 import java.util.Iterator;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import javax.imageio.ImageIO;
@@ -73,6 +72,6 @@ class ImageioSpiRegistrationTest {
         Iterable<T> iterable = () -> iterator;
         return StreamSupport
             .stream(iterable.spliterator(), false)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
