@@ -36,8 +36,6 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.MissingResourceException;
 import java.util.Optional;
-import java.util.stream.Collectors;
-
 import javax.servlet.ServletConfig;
 import javax.servlet.ServletContext;
 import javax.servlet.http.HttpServletRequest;
@@ -513,7 +511,7 @@ class OldAlbumWebApiServletTest extends ShiroTestBase {
     void testAvailableLocales() throws Exception {
         // Set up REST API servlet with mocked services
         var oldalbum = mock(OldAlbumService.class);
-        when(oldalbum.availableLocales()).thenReturn(Collections.singletonList(Locale.forLanguageTag("nb-NO")).stream().map(l -> LocaleBean.with().locale(l).build()).collect(Collectors.toList()));
+        when(oldalbum.availableLocales()).thenReturn(Collections.singletonList(Locale.forLanguageTag("nb-NO")).stream().map(l -> LocaleBean.with().locale(l).build()).toList());
         var logservice = new MockLogService();
 
         var useradmin = mock(UserManagementService.class);
